--- a/Vidily/Vidily.csproj
+++ b/Vidily/Vidily.csproj
@@ -196,18 +196,133 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805160900292_InitalModel.cs" />
+    <Compile Include="Migrations\201805160900292_InitalModel.Designer.cs">
+      <DependentUpon>201805160900292_InitalModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805160913165_AddSubscribetocustomer.cs" />
+    <Compile Include="Migrations\201805160913165_AddSubscribetocustomer.Designer.cs">
+      <DependentUpon>201805160913165_AddSubscribetocustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805160918410_membershiptype.cs" />
+    <Compile Include="Migrations\201805160918410_membershiptype.Designer.cs">
+      <DependentUpon>201805160918410_membershiptype.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805160930555_PopMemberTypes.cs" />
+    <Compile Include="Migrations\201805160930555_PopMemberTypes.Designer.cs">
+      <DependentUpon>201805160930555_PopMemberTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805160941069_CustomerNameAttributes.cs" />
+    <Compile Include="Migrations\201805160941069_CustomerNameAttributes.Designer.cs">
+      <DependentUpon>201805160941069_CustomerNameAttributes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161025306_MembershipTypeName.cs" />
+    <Compile Include="Migrations\201805161025306_MembershipTypeName.Designer.cs">
+      <DependentUpon>201805161025306_MembershipTypeName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161027440_PopMembershipNames.cs" />
+    <Compile Include="Migrations\201805161027440_PopMembershipNames.Designer.cs">
+      <DependentUpon>201805161027440_PopMembershipNames.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161041107_customerdateofbirth.cs" />
+    <Compile Include="Migrations\201805161041107_customerdateofbirth.Designer.cs">
+      <DependentUpon>201805161041107_customerdateofbirth.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161052470_nullbirthdate.cs" />
+    <Compile Include="Migrations\201805161052470_nullbirthdate.Designer.cs">
+      <DependentUpon>201805161052470_nullbirthdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161108037_dobformat.cs" />
+    <Compile Include="Migrations\201805161108037_dobformat.Designer.cs">
+      <DependentUpon>201805161108037_dobformat.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161119051_MovieAttributes.cs" />
+    <Compile Include="Migrations\201805161119051_MovieAttributes.Designer.cs">
+      <DependentUpon>201805161119051_MovieAttributes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161126345_fimgenres.cs" />
+    <Compile Include="Migrations\201805161126345_fimgenres.Designer.cs">
+      <DependentUpon>201805161126345_fimgenres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161141013_membershipnamefix.cs" />
+    <Compile Include="Migrations\201805161141013_membershipnamefix.Designer.cs">
+      <DependentUpon>201805161141013_membershipnamefix.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161142288_GenreList.cs" />
+    <Compile Include="Migrations\201805161142288_GenreList.Designer.cs">
+      <DependentUpon>201805161142288_GenreList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161146043_genreid2byte.cs" />
+    <Compile Include="Migrations\201805161146043_genreid2byte.Designer.cs">
+      <DependentUpon>201805161146043_genreid2byte.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161200384_modelmovieupdate.cs" />
+    <Compile Include="Migrations\201805161200384_modelmovieupdate.Designer.cs">
+      <DependentUpon>201805161200384_modelmovieupdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161202027_updateMovieModel1.cs" />
+    <Compile Include="Migrations\201805161202027_updateMovieModel1.Designer.cs">
+      <DependentUpon>201805161202027_updateMovieModel1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161203364_UpdateMovieModel2.cs" />
+    <Compile Include="Migrations\201805161203364_UpdateMovieModel2.Designer.cs">
+      <DependentUpon>201805161203364_UpdateMovieModel2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161207332_SeedMovies.cs" />
+    <Compile Include="Migrations\201805161207332_SeedMovies.Designer.cs">
+      <DependentUpon>201805161207332_SeedMovies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161209101_SeedMoviesList1.cs" />
+    <Compile Include="Migrations\201805161209101_SeedMoviesList1.Designer.cs">
+      <DependentUpon>201805161209101_SeedMoviesList1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161218323_seedGenreList.cs" />
+    <Compile Include="Migrations\201805161218323_seedGenreList.Designer.cs">
+      <DependentUpon>201805161218323_seedGenreList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161223246_SeedMovieList.cs" />
+    <Compile Include="Migrations\201805161223246_SeedMovieList.Designer.cs">
+      <DependentUpon>201805161223246_SeedMovieList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161248479_SeedMoveList2.cs" />
+    <Compile Include="Migrations\201805161248479_SeedMoveList2.Designer.cs">
+      <DependentUpon>201805161248479_SeedMoveList2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201805161353233_AddStockToMovies.cs" />
+    <Compile Include="Migrations\201805161353233_AddStockToMovies.Designer.cs">
+      <DependentUpon>201805161353233_AddStockToMovies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\FilmGenres.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Movies.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
+    <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\aspnet-Vidily-20180515103244.mdf" />
+    <Content Include="App_Data\aspnet-Vidily-20180515103244_log.ldf">
+      <DependentUpon>aspnet-Vidily-20180515103244.mdf</DependentUpon>
+    </Content>
+    <Content Include="bin\Vidily.dll" />
+    <Content Include="bin\Vidily.pdb" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -266,10 +381,16 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -282,6 +403,80 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201805160900292_InitalModel.resx">
+      <DependentUpon>201805160900292_InitalModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805160913165_AddSubscribetocustomer.resx">
+      <DependentUpon>201805160913165_AddSubscribetocustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805160918410_membershiptype.resx">
+      <DependentUpon>201805160918410_membershiptype.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805160930555_PopMemberTypes.resx">
+      <DependentUpon>201805160930555_PopMemberTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805160941069_CustomerNameAttributes.resx">
+      <DependentUpon>201805160941069_CustomerNameAttributes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161025306_MembershipTypeName.resx">
+      <DependentUpon>201805161025306_MembershipTypeName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161027440_PopMembershipNames.resx">
+      <DependentUpon>201805161027440_PopMembershipNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161041107_customerdateofbirth.resx">
+      <DependentUpon>201805161041107_customerdateofbirth.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161052470_nullbirthdate.resx">
+      <DependentUpon>201805161052470_nullbirthdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161108037_dobformat.resx">
+      <DependentUpon>201805161108037_dobformat.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161119051_MovieAttributes.resx">
+      <DependentUpon>201805161119051_MovieAttributes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161126345_fimgenres.resx">
+      <DependentUpon>201805161126345_fimgenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161141013_membershipnamefix.resx">
+      <DependentUpon>201805161141013_membershipnamefix.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161142288_GenreList.resx">
+      <DependentUpon>201805161142288_GenreList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161146043_genreid2byte.resx">
+      <DependentUpon>201805161146043_genreid2byte.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161200384_modelmovieupdate.resx">
+      <DependentUpon>201805161200384_modelmovieupdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161202027_updateMovieModel1.resx">
+      <DependentUpon>201805161202027_updateMovieModel1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161203364_UpdateMovieModel2.resx">
+      <DependentUpon>201805161203364_UpdateMovieModel2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161207332_SeedMovies.resx">
+      <DependentUpon>201805161207332_SeedMovies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161209101_SeedMoviesList1.resx">
+      <DependentUpon>201805161209101_SeedMoviesList1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161218323_seedGenreList.resx">
+      <DependentUpon>201805161218323_seedGenreList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161223246_SeedMovieList.resx">
+      <DependentUpon>201805161223246_SeedMovieList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161248479_SeedMoveList2.resx">
+      <DependentUpon>201805161248479_SeedMoveList2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805161353233_AddStockToMovies.resx">
+      <DependentUpon>201805161353233_AddStockToMovies.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
